--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@ applications:
 - name: jenkins-dotnet
   memory: 512M
   instances: 1
-  host: workshop-dotnet-${BUILD_NUMBER}
+  host: workshop-dotnet-vf-jenkins
   path: ./DeployFromHere
   buildpack: binary_buildpack
   stack: windows2012R2
